L: Fixed an issue preventing some browsers from using a dark scrollbar in dark mode.

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+:root { color-scheme: light dark }
+
 body {
     max-width: 45rem;
     margin: auto;
